--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,9 @@
       </footer>
     </section>
     <section class="twitter-feed">
-       {% twitter https://twitter.com/tjtaylorx maxwidth=500 limit=5 %}
+       <div>
+         <a class="twitter-timeline" data-theme="light" href="https://twitter.com/tjtaylorx" data-tweet-limit="3"></a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+       </div>
     </section>
   </body>
 </html>
