--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
       {{ content }}
 
       <div>
-        <a class="twitter-timeline" data-width="480" href="https://twitter.com/TJTaylorX?ref_src=twsrc%5Etfw">Tweets by TJTaylorX</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a class="twitter-timeline" data-width="480" data-tweet-limit="3" href="https://twitter.com/TJTaylorX?ref_src=twsrc%5Etfw">Tweets by TJTaylorX</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
       <footer class="site-footer">
         {% if site.github.is_project_page %}
